[package]
name = "chr"
version = "0.1.0"
edition = "2021"

[features]
default = []
io_uring = ["io-uring"]

[dependencies]
libc = "0.2"
blake3 = "1.5"
crc32c = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crossbeam-channel = "0.5"
rand = "0.8"
io-uring = { version = "0.6", optional = true }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
